--- a/res/etc.nginx.nginx.conf
+++ b/res/etc.nginx.nginx.conf
@@ -17,10 +17,11 @@ server {
     # DES-CBC3-SHA
     # Cipher Suite      Name (OpenSSL)  KeyExch.        Encryption      Bits    Cipher Suite Name (IANA)
     # [0x0a]        DES-CBC3-SHA        RSA             3DES        168     TLS_RSA_WITH_3DES_EDE_CBC_SHA
+    ssl_protocols SSLv2 SSLv3 TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers ECDHE-RSA-DES-CBC3-SHA:ECDHE-ECDSA-DES-CBC3-SHA:SRP-DSS-3DES-EDE-CBC-SHA:SRP-RSA-3DES-EDE-CBC-SHA:SRP-3DES-EDE-CBC-SHA:EDH-RSA-DES-CBC3-SHA:EDH-DSS-DES-CBC3-SHA:DH-RSA-DES-CBC3-SHA:DH-DSS-DES-CBC3-SHA:AECDH-DES-CBC3-SHA:ADH-DES-CBC3-SHA:ECDH-RSA-DES-CBC3-SHA:ECDH-ECDSA-DES-CBC3-SHA:DES-CBC3-SHA:PSK-3DES-EDE-CBC-SHA;
 
     # ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
-    ssl_protocols SSLv2 SSLv3 TLSv1 TLSv1.1 TLSv1.2; # TLSv1.3;
+    #ssl_protocols TLSv1.2;
     #ssl_prefer_server_ciphers on;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
@@ -40,3 +41,4 @@ server {
     }
 
 }
+
